Add support, before change to deals

--- a/views/policies.ejs
+++ b/views/policies.ejs
@@ -60,17 +60,32 @@
                     <h1><strong>Terms & Conditions</strong></h1> 
                     <div >
                         <h2 id="terms"><strong>Usage</strong></h2> 
-                    	<strong>1. Introduction</strong>
-                        <p>Auntie.cc, or Auntie See See, is a product listing search engine. By using our services as a retailer, you will be able to provide direct locational advertising to consumers </p>
+                    	<strong>Introduction</strong>
+                        <p>Welcome to Auntie.cc, or Auntie See See. Auntie.cc is a product listing search engine. If you are a retailer, you will be able to upload your products and have them searchable to consumers. As a consumer or customer, you will be able to find nearby stores or shops that sell the item that you are seeking.</p>
                         
-                        <strong>2. Product Listing</strong>
-                        <p></p>    
+                        <strong>Terms And Conditions</strong>
+                        <p>The Terms And Conditions contained herein on this webpage, shall govern your use of this website, including all pages within this website (collectively referred to herein below as this “Website”). These Terms apply in full force and effect to your use of this Website and by using this Website, you expressly accept all terms and conditions contained herein in full. You must not use this Website, if you have any objection to any of the Terms And Conditions.
+                        </p>    
+                        <p>Auntie.cc does not provide, own or control any of the product, deals or events listings that you can access through this Website.  Auntie.cc hosts content, including products, made available by or obtained from Businesses and Users. Auntie.cc is in no way responsible for the accuracy, timeliness or completeness of such content. The listings are owned, controlled or made available by third parties either directly (e.g., company, retailer accounts) or as an user (e.g., anonymous posting of events or deals). The posters are responsible for their listings on this Website. Your interaction with any listings accessed through this Website is at your own risk; Auntie.cc does not bear any responsibility should anything go wrong during your interaction with the products, deals or events listed.</p>
                         
-                        <strong>3. Deals</strong>
-                        <p>Auntie.cc, as controller,("Auntie.cc", "we", "us", or "our") is committed to protecting information under our control that identifies you ("personal data"), including y.</p>
+                        <strong>Product Listings</strong>
+                        <p>When you provide us with product listings, you own the listings you create and share, and you also grant us a perpetual, transferable, irrevocable, sub-licensable, fully-paid, worldwide license to use, modify, reproduce, distribute, prepare derivative works of, publicly perform, and publicly display (in tangible form and electronically) all listings or other content provided to us. We can use the listings in any format, channel, platform, or region with the right to localize the content into other languages. If uploaded or submitted to us, you further give us permission and the right to use your brand, image, likeness, or other personal attributes for the purposes described in these Terms.
+                        </p>
+                        <p>You authorize us to make copies as we deem necessary in order to facilitate the storage and assimilation of the listings on the websites. By providing us with product listing content, you represent and warrant that the listing content you provide will not violate or in any way infringe upon the rights of third parties, including property, contractual, employment, trade secrets, proprietary information, and nondisclosure rights, or any intellectual property rights. You may remove your listing(s) from the website, but the license that you have granted will remain in effect. You understand that we do not control nor are we responsible for reviewing product listings. However, we reserve the right to review, edit, or delete any product listings or your account at any time. We are not in any way responsible or liable for such product listings or the messaging contained in listing content.</p>
                         
-                        <strong>3. Events</strong>
-						<p>Auntie.cc</p>
+                        <strong>Deal Listings</strong>
+                        <p>You may promote a deal on our Website to advertise to the community. You authorize us to make copies as we deem necessary in order to facilitate the storage and assimilation of the listings on the websites. By providing us with deal listing content, you represent and warrant that the listing content you provide will not violate or in any way infringe upon the rights of third parties, including property, contractual, employment, trade secrets, proprietary information, and nondisclosure rights, or any intellectual property rights. You understand that we do not control nor are we responsible for reviewing deal listings. However, we reserve the right to review, edit, or delete any deal listings at any time. We are not in any way responsible or liable for such deal listings or the messaging contained in listing content.
+                        </p>
+
+                        <strong>Event Listings</strong>
+                        <p>You may promote an event on our Website to advertise to the community. You authorize us to make copies as we deem necessary in order to facilitate the storage and assimilation of the listings on the websites. By providing us with event listing content, you represent and warrant that the listing content you provide will not violate or in any way infringe upon the rights of third parties, including property, contractual, employment, trade secrets, proprietary information, and nondisclosure rights, or any intellectual property rights. You understand that we do not control nor are we responsible for reviewing event listings. However, we reserve the right to review, edit, or delete any event listings at any time. We are not in any way responsible or liable for such event listings or the messaging contained in listing content.</p>
+
+                        <strong>Content Removal and Disabling or Terminating Your Account</strong>
+                        <p>We can remove any content or information you share on the Service if we believe that it violates these Terms of Use, our policies or we are permitted or required to do so by law. We can refuse to provide or stop providing all or part of the Service to you (including terminating or disabling your account) immediately to protect our community or services, or if you create risk or legal exposure for us, violate these Terms of Use or our policies if you repeatedly infringe other people's intellectual property rights, or where we are permitted or required to do so by law. If we take action to disable or terminate your account, we will notify you where appropriate. If you believe your account has been terminated in error, or you want to disable or permanently delete your account, consult our Help Center.
+                        </p>
+
+                        <strong>Content Removal and Disabling or Terminating Your Account</strong>
+                        <p>We may change our Service and policies, and we may need to make changes to these Terms so that they accurately reflect our Service and policies. Unless otherwise required by law, we will notify you (for example, through our Service) before we make changes to these Terms and give you an opportunity to review them before they go into effect. Then, if you continue to use the Service, you will be bound by the updated Terms. If you do not want to agree to these or any updated Terms, you can delete your account (if any), and stop using the Services.</p>
                     </div> 
                     
                     <div >     
@@ -143,7 +158,21 @@ Cookies do not harm your device and do not contain any viruses. You can prevent 
                     </div>
                 </div>                                  
             </div>             
-        </main>         
+        </main>     
+        <footer class="my-5 pt-5 text-muted text-center text-small"> 
+            <p class="mb-1">&copy; 2019 Auntie.cc</p> 
+            <ul class="list-inline"> 
+                <li class="list-inline-item"> 
+                    <a href="/policies#privacy">Privacy</a> 
+                </li>                 
+                <li class="list-inline-item"> 
+                    <a href="/policies#terms">Terms</a> 
+                </li>                 
+                <li class="list-inline-item"> 
+                    <a href="/support">Support</a> 
+                </li>                 
+            </ul>             
+        </footer>       
         <!-- Bootstrap core JavaScript
     ================================================== -->         
         <!-- Placed at the end of the document so the pages load faster -->         
