--- a/views/dealsrecommend.ejs
+++ b/views/dealsrecommend.ejs
@@ -80,11 +80,11 @@
                         <label>Description</label>
                         <textarea type="text" rows="6" class="form-control" name="description"  id="edesc"></textarea>
                     </div>
-                    <div class="form-group">Venue
+                    <div class="form-group">Location
                         <br>
-                        <input type="text" class="form-control" name="dealVenue">
+                        <input type="text" class="form-control" name="dealLocation">
                     </div>
-                    <div class="form-group">Venue Postal Code
+                    <div class="form-group">Location Postal Code
                         <br>
                         <input type="text" class="form-control" name="dealPostal">
                     </div>
