Got search form working

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -93,52 +93,53 @@ a:visited {
                 </div>                 
                 <div class="col-md-3 offcanvas-collapse"> 
                     <div class="card">
-                        <form id="eventFilter" action="/search" method="get" >
-                        <article class="card-group-item">
-                            <header class="card-header">
-                                <h6 class="title">Location </h6>
-                            </header>
-                            <div class="filter-content">
-                                <div class="card-body">
-                                        <select class="form-control" name="loc">
-                                            <option value="0">Select</option>
-                                            <option value="12">Central</option>
-                                            <option value="10">Central - Near Orchard</option>
-                                            <option value="09">Central - Orchard</option>
-                                            <option value="13">Central East</option>
-                                            <option value="20">Central North</option>
-                                            <option value="03">Central South</option>
-                                            <option value="21">Central West</option>
-                                            <option value="01">City - Business District</option>
-                                            <option value="15">East Coast</option>
-                                            <option value="18">Far East</option>
-                                            <option value="25">Far North</option>
-                                            <option value="24">Far North West</option>
-                                            <option value="22">Far West</option>
-                                            <option value="26">North</option>
-                                            <option value="28">North East</option>
-                                            <option value="23">North West</option>
-                                            <option value="04">South</option>
-                                            <option value="05">South West</option>
-                                            <option value="16">Upper East Coast</option>
-                                        </select>                     
-                                        <!-- form-check.// -->
-                                </div>             
-                                <!-- card-body.// -->
-                            </div>
-                        </article>     
-                        <!-- card-group-item.// -->                     
-                        <hr>
-                        <article class="card-group-item">
-                            <div class="filter-content">
-                                <div class="text-center pt-auto pb-3">
-                                    <button class="btn-danger btn">Filter!</button>
+                        <form id="eventFilter"  method="get" >
+                            <article class="card-group-item">
+                                <header class="card-header">
+                                    <h6 class="title">Location </h6>
+                                </header>
+                                <div class="filter-content">
+                                    <div class="card-body">
+                                            <select id="qloc" class="form-control" name="loc">
+                                                <option value="0">Select</option>
+                                                <option value="12">Central</option>
+                                                <option value="10">Central - Near Orchard</option>
+                                                <option value="09">Central - Orchard</option>
+                                                <option value="13">Central East</option>
+                                                <option value="20">Central North</option>
+                                                <option value="03">Central South</option>
+                                                <option value="21">Central West</option>
+                                                <option value="01">City - Business District</option>
+                                                <option value="15">East Coast</option>
+                                                <option value="18">Far East</option>
+                                                <option value="25">Far North</option>
+                                                <option value="24">Far North West</option>
+                                                <option value="22">Far West</option>
+                                                <option value="26">North</option>
+                                                <option value="28">North East</option>
+                                                <option value="23">North West</option>
+                                                <option value="04">South</option>
+                                                <option value="05">South West</option>
+                                                <option value="16">Upper East Coast</option>
+                                            </select>                     
+                                            <!-- form-check.// -->
+                                    </div>             
+                                    <!-- card-body.// -->
                                 </div>
-                            </div>         
-                        </article>     
-                        <!-- card-group-item.// -->
+                            </article>     
+                            <!-- card-group-item.// -->                     
+                            <hr>
+                            <article class="card-group-item">
+                                <div class="filter-content">
+                                    <div class="text-center pt-auto pb-3">
+                                        <button class="btn-danger btn">Filter!</button>
+                                    </div>
+                                </div>         
+                            </article>     
+                            <!-- card-group-item.// -->
                         </form>
-                    </div>                </div>                 
+                    </div>                
+                </div>                 
             </div>             
         </main>         
         <!-- Bootstrap core JavaScript
@@ -152,7 +153,50 @@ a:visited {
             $('[data-toggle="offcanvas"]').on('click', function () {
                 $('.offcanvas-collapse').toggleClass('open');
             });
+
+            var query = window.location.search.substring(1);
+            var qs = parse_query_string(query);
+            console.log(qs);
+            var formFilter = document.getElementById("eventFilter");
+            var formLocDropdown = document.getElementById("qloc");
+
+            if(qs['loc']){
+                formLocDropdown.value = qs['loc'];
+            }
+            for (var key in qs) {
+
+                if (! formFilter.elements.namedItem(key)) {
+                    var preInput = document.createElement("input");
+                    preInput.setAttribute("type", "hidden");
+                    preInput.setAttribute("name", key);
+                    preInput.setAttribute("value", qs[key]);
+                    //append to form element that you want .
+                    formFilter.appendChild(preInput);
+                }
+            }
         });
+
+        function parse_query_string(query) {
+            var vars = query.split("&");
+            var query_string = {};
+            for (var i = 0; i < vars.length; i++) {
+                var pair = vars[i].split("=");
+                var key = decodeURIComponent(pair[0]);
+                var value = decodeURIComponent(pair[1]);
+                // If first entry with this name
+                if (typeof query_string[key] === "undefined") {
+                query_string[key] = decodeURIComponent(value);
+                // If second entry with this name
+                } else if (typeof query_string[key] === "string") {
+                var arr = [query_string[key], decodeURIComponent(value)];
+                query_string[key] = arr;
+                // If third or later entry with this name
+                } else {
+                query_string[key].push(decodeURIComponent(value));
+                }
+            }
+            return query_string;
+        }
 
     </script>         
     </body>     
