--- a/views/promo.ejs
+++ b/views/promo.ejs
@@ -120,16 +120,16 @@
                             <h3 class="title mb-3"><%= promotion.title %></h3> 
                             <div class="mb-1 text-muted d-flex justify-content-between align-self-stretch">
                                 <p><%= promotion.company %></p>
+                                <p><%= promotion.start %> till <%= promotion.end %></p>
                             </div>                             
                             <dl class="item-property"> 
-                                <dt>Description</dt> 
+                                <h5>Description</h5> 
                                 <dd> 
                                     <%- promotion.description %>
                                 </dd>                                 
                             </dl>                             
                             <dl class="param param-feature"> 
-                                <dt class="pr-auto">Model</dt> 
-                                <dd>12345611</dd>                                 
+                                <h6 class="mb-0"><a href='https://<%= promotion.outboundURL %>' target="_blank">Website</a></h6>                                
                             </dl>                             
                             <hr> 
                         </article>                         
