--- a/views/dash.ejs
+++ b/views/dash.ejs
@@ -13,18 +13,19 @@
         <link href="assets/css/auntie.css" rel="stylesheet"> 
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-        <style>.app-fab--absolute {
-    position: fixed;
-    bottom: 1rem;
-    right: 1rem;
-}
-
-@media (min-width: 1024px) {
-    .app-fab--absolute {
-        bottom: 1.5rem;
-        right: 1.5rem;
-    }
-}</style>
+        <style>
+            .app-fab--absolute {
+                position: fixed;
+                bottom: 1rem;
+                right: 1rem;
+            }
+            @media (min-width: 1024px) {
+                .app-fab--absolute {
+                    bottom: 1.5rem;
+                    right: 1.5rem;
+                }
+            }
+        </style>
     </head>     
     <body class="bg-light"> 
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-danger"> 
@@ -139,14 +140,6 @@
             }
 
         });
-
-        /*
-        jQuery(document).ready(function($) {
-        $(".clickable-row").click(function() {
-                window.location = $(this).data("href");
-            });
-        });*/
-
     </script>         
     </body>     
 </html>
