--- a/views/deals.ejs
+++ b/views/deals.ejs
@@ -13,27 +13,28 @@
         <link href="assets/css/auntie.css" rel="stylesheet"> 
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-        <style>.app-fab--absolute {
+        <style>
+            .app-fab--absolute {
                     position: fixed;
                     bottom: 1rem;
                     right: 1rem;
+            }
+
+            @media (min-width: 1024px) {
+                .app-fab--absolute {
+                    bottom: 1.5rem;
+                    right: 1.5rem;
+                }
+            }
+
+            a:link {
+                color: 	#d9534f;
                 }
 
-                @media (min-width: 1024px) {
-                    .app-fab--absolute {
-                        bottom: 1.5rem;
-                        right: 1.5rem;
-                    }
-                }
-
-                a:link {
-  color: 	#d9534f;
-}
-
-/* visited link */
-a:visited {
-  color: darkred;
-}  
+            /* visited link */
+            a:visited {
+            color: darkred;
+            }  
         </style>
     </head>     
     <body class="bg-light"> 
