--- a/views/post.ejs
+++ b/views/post.ejs
@@ -15,42 +15,42 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.4.3/cropper.min.css" rel="stylesheet"> 
         <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
         <script src="https://cdn.ckeditor.com/ckeditor5/11.2.0/classic/ckeditor.js"></script>
-        <style>#my-image,
-#use {
-    display: none;
-}
+        <style>
+            #my-image,#use {
+                display: none;
+            }
 
-.prodbtn {
-    width: 50px;
-}
+            .prodbtn {
+                width: 50px;
+            }
 
-.bootstrap-tagsinput {
-    width: 100%;
-}
-.ck-editor__editable {
-    min-height: 300px;
-}
+            .bootstrap-tagsinput {
+                width: 100%;
+            }
+            .ck-editor__editable {
+                min-height: 300px;
+            }
 
-html,
-body {
-    padding-top: 20px;
-}
+            html, body {
+                padding-top: 20px;
+            }
 
-[data-role="dynamic-fields"] > .p-specs + .p-specs {
-    margin-top: 0.5em;
-}
+            [data-role="dynamic-fields"] > .p-specs + .p-specs {
+                margin-top: 0.5em;
+            }
 
-[data-role="dynamic-fields"] > .p-specs [data-role="add"] {
-    display: none;
-}
+            [data-role="dynamic-fields"] > .p-specs [data-role="add"] {
+                display: none;
+            }
 
-[data-role="dynamic-fields"] > .p-specs:last-child [data-role="add"] {
-    display: inline-block;
-}
+            [data-role="dynamic-fields"] > .p-specs:last-child [data-role="add"] {
+                display: inline-block;
+            }
 
-[data-role="dynamic-fields"] > .p-specs:last-child [data-role="remove"] {
-    display: none;
-}</style>
+            [data-role="dynamic-fields"] > .p-specs:last-child [data-role="remove"] {
+                display: none;
+            }
+        </style>
     </head>     
     <body class="bg-light"> 
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-danger"> 
@@ -138,16 +138,10 @@ body {
                                 <label class="sr-only" for="spec-value">Field Value</label>
                                 <input name="specValues[]" type="text" class="form-control" id="spec-value" placeholder="Details">
                             </div>
-                            <button class="prodbtn btn btn-secondary" data-role="remove" type="button">
-                                -
-</button>
-                            <button class="prodbtn btn btn-danger" data-role="add" type="button">
-                                +
-</button>
+                            <button class="prodbtn btn btn-secondary" data-role="remove" type="button">-</button>
+                            <button class="prodbtn btn btn-danger" data-role="add" type="button">+</button>
                         </div>                         
-                        <!-- /div.form-inline -->
                     </div>                     
-                    <!-- /div[data-role="dynamic-fields"] -->
                     <div class="container col-xl-10 col-lg-8 mt-5">
                         <div class="row">
                             <div class="d-flex justify-content-center align-items-center col-6 " style="padding-top: 50%;">
