--- a/views/promo.ejs
+++ b/views/promo.ejs
@@ -164,12 +164,6 @@
         <script src="assets/bootstrap/js/bootstrap.min.js"></script>         
         <script src="assets/js/jquery.flexdatalist.min.js"></script>         
         <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.4.3/cropper.min.js"></script>         
-        <script>
-        $(document).ready(function () {
-            $('[data-toggle="offcanvas"]').on('click', function () {
-                $('.offcanvas-collapse').toggleClass('open');
-            });
-        });
-    	</script>         
+        <script src="assets/js/auntie.js"></script>                
     </body>     
 </html>
