--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -125,12 +125,6 @@
         <script src="assets/js/jquery.min.js"></script>         
         <script src="assets/js/popper.js"></script>         
         <script src="assets/bootstrap/js/bootstrap.min.js"></script>            
-        <script>
-        $(document).ready(function () {
-            $('[data-toggle="offcanvas"]').on('click', function () {
-                $('.offcanvas-collapse').toggleClass('open');
-            });
-        });
-    </script>         
+        <script src="assets/js/auntie.js"></script>                 
     </body>     
 </html>
