--- a/views/index.ejs
+++ b/views/index.ejs
@@ -96,12 +96,7 @@
         <script src="assets/js/jquery.min.js"></script>         
         <script src="assets/js/popper.js"></script>         
         <script src="assets/bootstrap/js/bootstrap.min.js"></script>         
-        <script>
-        $(document).ready(function () {
-            $('[data-toggle="offcanvas"]').on('click', function () {
-                $('.offcanvas-collapse').toggleClass('open');
-            });
-        });
+        <script src="assets/js/auntie.js"></script>         
     </script>         
     </body>     
 </html>
