--- a/views/policies.ejs
+++ b/views/policies.ejs
@@ -179,12 +179,6 @@ Cookies do not harm your device and do not contain any viruses. You can prevent 
         <script src="assets/js/jquery.min.js"></script>         
         <script src="assets/js/popper.js"></script>         
         <script src="assets/bootstrap/js/bootstrap.min.js"></script>         
-        <script>
-        $(document).ready(function () {
-            $('[data-toggle="offcanvas"]').on('click', function () {
-                $('.offcanvas-collapse').toggleClass('open');
-            });
-        });
-    </script>         
+        <script src="assets/js/auntie.js"></script>                 
     </body>
 </html>
