--- a/views/dash.ejs
+++ b/views/dash.ejs
@@ -121,12 +121,9 @@
         <script src="assets/js/popper.js"></script>         
         <script src="assets/bootstrap/js/bootstrap.min.js"></script>
         <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+        <script src="assets/js/auntie.js"></script>                
         <script>
         $(document).ready(function () {
-            $('[data-toggle="offcanvas"]').on('click', function () {
-                $('.offcanvas-collapse').toggleClass('open');
-            });
-
             var deleteLinks = document.querySelectorAll('.delete');
 
             for (var i = 0; i < deleteLinks.length; i++) {
@@ -138,7 +135,6 @@
                 }
             });
             }
-
         });
     </script>         
     </body>     
