--- a/views/deals.ejs
+++ b/views/deals.ejs
@@ -178,13 +178,10 @@
         <script src="assets/js/jquery.min.js"></script>         
         <script src="assets/js/popper.js"></script>         
         <script src="assets/bootstrap/js/bootstrap.min.js"></script> 
-        <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>        
+        <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script> 
+        <script src="assets/js/auntie.js"></script>                       
         <script>
         $(document).ready(function () {
-            $('[data-toggle="offcanvas"]').on('click', function () {
-                $('.offcanvas-collapse').toggleClass('open');
-            });
-
             $("#eventFilter").submit(function() {
                     $(this).find(":input").filter(function(){ return !this.value; }).attr("disabled", "disabled");
                     return true; // ensure form still submits
