--- a/views/dealsrecommend.ejs
+++ b/views/dealsrecommend.ejs
@@ -120,14 +120,9 @@
         <!-- Placed at the end of the document so the pages load faster -->         
         <script src="../assets/js/jquery.min.js"></script>         
         <script src="../assets/js/popper.js"></script>         
-        <script src="../assets/bootstrap/js/bootstrap.min.js"></script>          
+        <script src="../assets/bootstrap/js/bootstrap.min.js"></script>    
+        <script src="assets/js/auntie.js"></script>                      
         <script>
-        $(document).ready(function () {
-            $('[data-toggle="offcanvas"]').on('click', function () {
-                $('.offcanvas-collapse').toggleClass('open');
-            });
-        });
-
         let editor;
         ClassicEditor
             .create( document.querySelector( '#edesc' ), {
