--- a/views/details.ejs
+++ b/views/details.ejs
@@ -10,53 +10,7 @@
         <!-- Bootstrap core CSS -->         
         <link href="../assets/bootstrap/css/bootstrap.css" rel="stylesheet"> 
         <link href="../assets/css/auntie.css" rel="stylesheet"> 
-        <style>#my-image,
-#use {
-    display: none;
-}
-
-.bootstrap-tagsinput {
-    width: 100%;
-}
-
-
-.gallery-wrap .img-small-wrap .item-gallery {
-    width: 60px;
-    height: 60px;
-    border: 1px solid #ddd;
-    margin: auto;
-    display: inline-block;
-    overflow: hidden;
-}
-
-.gallery-wrap .img-small-wrap {
-    text-align: center;
-}
-
-.gallery-wrap .img-small-wrap img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: cover;
-    border-radius: 4px;
-    cursor: zoom-in;
-}
-
-#specs {
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-}
-
-#specs td,
-#specs th {
-    border: 1px solid #ddd;
-}
-
-#specs tr:nth-child(even) {
-    background-color: #f2f2f2;
-}
-
-</style>
+        <link href="assets/css/listing.css" rel="stylesheet">         
     </head>     
     <body class="bg-light"> 
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-danger"> 
@@ -181,12 +135,8 @@
         <script src="../assets/js/jquery.min.js"></script>         
         <script src="../assets/js/popper.js"></script>         
         <script src="../assets/bootstrap/js/bootstrap.min.js"></script>         
+        <script src="assets/js/auntie.js"></script>                
         <script>
-        $(document).ready(function () {
-            $('[data-toggle="offcanvas"]').on('click', function () {
-                $('.offcanvas-collapse').toggleClass('open');
-            });
-        });
             
         $('.timg').on('click', function() {
 			 document.getElementById("mainImg").src = $(this)[0].src;
