--- a/views/events.ejs
+++ b/views/events.ejs
@@ -177,19 +177,15 @@
         <script src="assets/js/jquery.min.js"></script>         
         <script src="assets/js/popper.js"></script>         
         <script src="assets/bootstrap/js/bootstrap.min.js"></script> 
-        <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>        
+        <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>     
+        <script src="assets/js/auntie.js"></script>                   
         <script>
         $(document).ready(function () {
-            $('[data-toggle="offcanvas"]').on('click', function () {
-                $('.offcanvas-collapse').toggleClass('open');
-            });
-
             $("#eventFilter").submit(function() {
                     $(this).find(":input").filter(function(){ return !this.value; }).attr("disabled", "disabled");
                     return true; // ensure form still submits
             });
             $( "#eventFilter" ).find( ":input" ).prop( "disabled", false );
-
         });
     </script>         
     </body>     
