--- a/views/details.ejs
+++ b/views/details.ejs
@@ -10,7 +10,7 @@
         <!-- Bootstrap core CSS -->         
         <link href="../assets/bootstrap/css/bootstrap.css" rel="stylesheet"> 
         <link href="../assets/css/auntie.css" rel="stylesheet"> 
-        <link href="assets/css/listing.css" rel="stylesheet">         
+        <link href="../assets/css/listing.css" rel="stylesheet">         
     </head>     
     <body class="bg-light"> 
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-danger"> 
@@ -135,7 +135,7 @@
         <script src="../assets/js/jquery.min.js"></script>         
         <script src="../assets/js/popper.js"></script>         
         <script src="../assets/bootstrap/js/bootstrap.min.js"></script>         
-        <script src="assets/js/auntie.js"></script>                
+        <script src="../assets/js/auntie.js"></script>                
         <script>
             
         $('.timg').on('click', function() {
