Revert "Added a:link/visited and .app-fab (material design) to auntie.css"
This reverts commit 21acba8719e564ea4070948686aea12c03d14658.

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -11,6 +11,21 @@
         <link href="assets/bootstrap/css/bootstrap.css" rel="stylesheet"> 
         <!-- Custom styles for this template -->         
         <link href="assets/css/auntie.css" rel="stylesheet"> 
+        <style>
+            a:link {
+            color: 	#d9534f;
+            }
+            /* visited link */
+            a:visited {
+            color: darkred;
+            }   
+            .truncate {
+            width: 400px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            }
+        </style>
     </head>     
     <body class="bg-light"> 
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-danger"> 
